Move away of deprecated Class.newInstance.
Use the Constructor.newInstance instead.

Change-Id: I7814d2850d77a5dc5e88f5e1f55e4e3275e7d990
Signed-off-by: Alexander Kurtakov <akurtako@redhat.com>